Added restoring of deleted accounts